[jdk17] add jdk package