@@ -10,7 +10,7 @@
     <version>${oap.maven.project.version}</version>
 
     <properties>
-        <oap.maven.project.version>17.3.0.7</oap.maven.project.version>
+        <oap.maven.project.version>17.3.0.8</oap.maven.project.version>
 
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -163,7 +163,6 @@
                                 --add-opens=java.base/java.net=ALL-UNNAMED
                                 --add-opens=java.base/java.text=ALL-UNNAMED
                                 --add-opens=java.sql/java.sql=ALL-UNNAMED
-                                --add-opens=java.util.concurrent.atomic/java.util.concurrent.atomic=ALL-UNNAMED
                             </argLine>
                             <trimStackTrace>false</trimStackTrace>
                             <testFailureIgnore>true</testFailureIgnore>
